# populationsim

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  FIXME.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  SetUpPopulationSim.bat  Vagrantfile  application_configuration.html  docs.html  ez_setup.py  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  software.html  validation.html
_sources/: application_configuration.rst.txt  docs.rst.txt  getting_started.rst.txt  index.rst.txt  software.rst.txt  validation.rst.txt
docs/: Makefile  application_configuration.rst  conf.py  docs.rst  getting_started.rst  index.rst  make.bat  software.rst  validation.rst
example_calm/: README.md  RunPopulationSim_base.bat  balancer.py  calm_data.py  convert_calm_data.py  example.py  run_populationsim.py
example_calm_prev/: run_populationsim.py
example_calm_repop/: RunPopulationSim_repop.bat  run_populationsim.py
example_new_calm/: convert_rsg_data.py
example_oceanside_repop/: run_populationsim.py
example_survey_weighting/: run_populationsim.py
example_test/: balance.py  convert_test_data.py  run_populationsim.py
example_weighting/: run_populationsim.py
examples/: README.md  cli_example.py
papers/: TRBPoster_PaulDoyleStablerFreedmanBettinardi_v5[1].pptx
populationsim/: __init__.py  __main__.py  assign.py  balancer.py  doppel.py  helper.py  integerizer.py  lp.py  lp_cvx.py  lp_ortools.py  multi_integerizer.py  run.py  sequential_integerizer.py  simul_balancer.py  simul_integerizer.py  util.py
scripts/: README.md  calm_verification.yaml  validation.py  (+4 more)
(+234 files in other folders)
