[project]
name = "nick-populationsim"
version = "0.6.3"
description = "Population Synthesis (for ActivitySim)"
authors = [
    { name = "Ben Stabler", email = "ben.stabler@rsginc.com" }
    ]
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "ortools>=5.1.4045",
    "numpy>=1.16.1",
    "pandas>=1.1.0,<1.5.0",
    "setuptools>=75.3.2",
    "activitysim>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.9",
]

[pytest.ini]
python_paths = [
    "populationsim",
    "tests",
]

[tool.setuptools]
packages = [
    "populationsim",
]
